# csci445-robot

./: README.md  main.cpp
AllFiles/: .Xauthority  .bash_history  .goutputstream-IS2ELX  .xsession-errors  .xsession-errors.old
AllFiles/.AppleDB/: cnid2.db  db_errlog
AllFiles/.AppleDouble/: .Parent  .Xauthority  .bash_history  .bash_logout  .bashrc  .dmrc  .profile  .xsession-errors  .xsession-errors.old
AllFiles/.cache/.AppleDouble/: .Parent
AllFiles/.config/.AppleDouble/: .Parent
AllFiles/.config/leafpad/: leafpadrc
AllFiles/.fontconfig/: cabbd14511b9e8a55e92af97fb3a0461-le32d8.cache-3
AllFiles/.vnc/: passwd
AllFiles/Aidan/: README.md
AllFiles/Camera/: CMakeCache.txt  CMakeLists.txt  Color  Makefile  camcv.cpp  f  runme
AllFiles/Camera2/: cmake_install.cmake  killme
AllFiles/Compass/: a.out  com.cpp
AllFiles/Flex/: CMakeCache.txt  CMakeLists.txt  Flex  Makefile  cmake_install.cmake  flex.cpp
AllFiles/ServoMotor/: CMakeCache.txt  CMakeLists.txt  Makefile  ServoMotor  ServoMotor.bck  cmake_install.cmake  servomotor.cpp  servomotor.cpp.bck
AllFiles/Sonar/: CMakeCache.txt  CMakeLists.txt  Makefile  Sonar  cmake_install.cmake  sonar.cpp
AllFiles/circle/: CMakeCache.txt  CMakeLists.txt  Makefile  circle  circle.cpp  cmake_install.cmake  f  runme
AllFiles/displayImg/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  displayimage
AllFiles/movingP/: CMakeCache.txt  Makefile  Util_Map.h  cmake_install.cmake  f  main.cpp  particle  robot.h
AllFiles/particleFilter/: CMakeCache.txt  CMakeLists.txt  map_origin20151003.txt  particle
AllFiles/particleFilter_temp/: cmake_install.cmake  main.cpp  particle
AllFiles/pid/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pid  pid.cpp  runme
AllFiles/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test
Camera2/: camcv.cpp  main.cpp
Robot/: .cproject  a.out  compass.h  howToCompile.txt  manOver.cpp  manualOverride.cpp  robot.cpp  robot.h  robot.h.gch
finalSimulation/: A_Star.h~  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Node.h~  Particle.h  Particle.h~  Util.h  cmake_install.cmake  main.cpp  main.cpp~
finalSimulationSlowMerge/: 20151130finalMap.txt  A_Star.h  CMakeLists.txt  Node.h  Util_Map.h  main.cpp  map.txt  particle  robot.h
lab3-pid/: pid.cpp  runme
particleFilter/: Makefile  main.cpp
particleFilter_temp/: .openme.txt.swp  openme.txt
(+71 files in other folders)
